--- a/sass/partials/_index_wrapper.scss
+++ b/sass/partials/_index_wrapper.scss
@@ -1,8 +1,8 @@
 .full-content-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
   align-items: center;
+  min-height: 100%;
 
   .header-wrapper {
     order: 1;
