--- a/sass/partials/_post_wrapper.scss
+++ b/sass/partials/_post_wrapper.scss
@@ -1,7 +1,6 @@
 .full-content-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
 
   .header-wrapper {
     order: 1;
